[package]
name = "heimdallr"
version = "0.1.0"
authors = ["Michael Blesel <michaelblesel@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "*", features = ["derive"]}
serde_json= "*"
bincode="*"
local_ipaddress = "*"
pnet = "*"
